--- a/style.css
+++ b/style.css
@@ -17,3 +17,25 @@ ul {
 ul li {
 	padding: 1rem 0;
 }
+
+/* Create a css class (e.g. .done) that, when applied on an element, adds the text-decoration: line-through property */
+.done {
+	text-decoration: line-through;
+}
+
+input {
+	height: 2rem;
+	width: 20rem;
+	border: 1px solid black;
+	font-size: 1.5rem;
+}
+
+button {
+	background: brown;
+	display: block;
+	height: 36px;
+	width: 10rem;
+	margin-top: 1rem;
+	color: white;
+	font-size: 1rem;
+}
