--- a/style.css
+++ b/style.css
@@ -1,13 +1,21 @@
 body {
-	border: 1px dotted tomato;
+	border: 1px solid #3b3a36;
+	border-radius: 10% 10%;
 	box-sizing: border-box;
-	border-width: 0 1px;
-	font-family: sans-serif;
+	border-width: 1px;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 2rem;
-	margin: 0 auto;
+	margin: 5% auto;
 	max-width: 700px;
 	min-height: 100vh;
 	padding: 4rem;
+	background: #c0dfd9;
+	color: #3b3a36;
+}
+
+h1 {
+	text-align: center;
+	margin-top: 0;
 }
 
 ul {
@@ -15,33 +23,51 @@ ul {
 }
 
 ul li {
-	padding: 1rem 0;
+	padding: 1rem;
+	border-bottom: 1px dashed #595853;
+	list-style: none;
+	transition: all .5s ease;
+}
+
+ul li:hover {
+	background: rgba(182, 193, 191, 1);
+	transition: all .3s ease;
 }
 
 /* Create a css class (e.g. .done) that, when applied on an element, adds the text-decoration: line-through property */
 .done {
 	text-decoration: line-through;
+	opacity: 0.3;
 }
 
 input {
+	box-sizing: border-box;
 	height: 2rem;
-	width: 20rem;
-	border: 1px solid black;
+	width: 100%;
+	padding: 1rem;
+	border-style: none;
+	outline: none;
+	border-bottom: 1.5px solid #3b3a36;
 	font-size: 1.5rem;
+	background: rgba(255,255,255,0)
 }
 
+input:active {
+	outline: none;
+}
 button {
 	background: brown;
 	display: block;
-	height: 36px;
 	width: 10rem;
-	margin-top: 1rem;
+	margin: 1rem auto;
+	padding: 1rem;
+	border-radius: 8px;
 	color: white;
-	font-size: 1rem;
+	font-size: 1.3rem;
 }
 
 li span {
 	float: right;
-	color: red;
+	color: 3b3a36;
 	font-weight: bold;
 }
