--- a/style.css
+++ b/style.css
@@ -42,14 +42,17 @@ ul li:hover {
 
 input {
 	box-sizing: border-box;
-	height: 2rem;
 	width: 100%;
-	padding: 1rem;
+	padding: 0 1rem 1rem 1rem;
+	margin-bottom: 1rem;
 	border-style: none;
 	outline: none;
 	border-bottom: 1.5px solid #3b3a36;
 	font-size: 1.5rem;
-	background: rgba(255,255,255,0)
+	background: rgba(255,255,255,0);
+}
+input::-ms-input-placeholder {
+	color: red;
 }
 
 input:active {
@@ -64,6 +67,7 @@ button {
 	border-radius: 8px;
 	color: white;
 	font-size: 1.3rem;
+	outline: none;
 }
 
 li span {
